<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="nano">My Nanodegree Apps</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="score">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="buildBigger">BUILD IT BIGGER</string>
    <string name="xyz">XYZ READER</string>
    <string name="capstone">CAPSTONE : MY OWN APP</string>
</resources>
