<?xml version="1.0" encoding="utf-8"?>

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="fill_parent"
android:layout_height="fill_parent" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nanodegree.riya.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/text1"
        android:text="@string/nano"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/button1"
        style="@style/button"
        android:layout_below="@+id/text1"
        android:text="@string/spotify"
        />

    <Button
        android:id="@+id/button2"
        style="@style/button"
        android:layout_below="@+id/button1"
        android:text="@string/score"
        />

    <Button
        android:id="@+id/button3"
        style="@style/button"
        android:layout_below="@+id/button2"
        android:text="@string/library"
        />

    <Button
        android:id="@+id/button4"
        style="@style/button"
        android:layout_below="@+id/button3"
        android:text="@string/buildBigger"
        />

    <Button
        android:id="@+id/button5"
        style="@style/button"
        android:layout_below="@+id/button4"
        android:text="@string/xyz"
        />

    <Button
        android:id="@+id/button6"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="#DC143C"
        android:elevation="30dp"
        android:textColor="#FFFFFF"
        android:onClick="onClick"
        android:text="@string/capstone"
        />

</RelativeLayout>

</ScrollView>